--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,72 @@
 
     </main>
     <footer class="footer">
-
+        <div class="container">
+            <div class="f-head row align-items-end">
+                <div class="col-4">
+                    <div class="wrap-social d-flex flex-row align-items-center">
+                        <a href="#">
+                            <i class="icofont-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="icofont-instagram"></i>
+                        </a>
+                        <a href="#">
+                            <i class="icofont-brand-youtube"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="logo">
+                        <img src="assets/images/logo.png" alt="logo">
+                    </div>
+                </div>
+                <div class="col-4">
+                    
+                </div>
+            </div>
+            <div class="f-body row align-items-center">
+                <div class="col-12 col-lg-4">
+                    <div class="w_info">
+                        <div class="title">
+                            Địa chỉ
+                        </div>
+                        <div class="desc">
+                            34C Cao Bá Quát, Ba Đình, Hanoi, Vietnam
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="w_opening">
+                        <div class="title">
+                            Open Timing
+                        </div>
+                        <div class="date">
+                            Monday - Friday
+                        </div>
+                        <div class="time">
+                            7 am - 10 pm <br>
+                            (Breakfast , Lunch, Dinner)
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="w_info">
+                        <div class="title">
+                            Contact Us
+                        </div>
+                        <div class="desc">
+                            <a href="#">
+                                example@example.com
+                            </a>
+                        </div>
+                        <div class="desc">
+                            0123456789
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="assets/js/jquery-main.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
