--- a/about.html
+++ b/about.html
@@ -33,22 +33,22 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle active" href="about.html" data-bs-toggle="dropdown">
                             Về chúng tôi
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="about.html#section-1">
                                     Cảm hứng thành lập
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="about.html#section-2">
                                     Cảm hứng của chef
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="about.html#section-3">
                                     Câu chuyện của món ăn
                                 </a>
                             </li>
@@ -431,7 +431,7 @@
     </div>
 
     <!-- about section -->
-    <section class="section-padding section-about" id="about">
+    <section id="section-1" class="section-padding section-about">
         <div class="container">
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 mb-5 mb-lg-0">
@@ -439,7 +439,7 @@
                         <div class="section-title">
                             <div class="title">
                                 <h2>
-                                    Cảm hứng thành lập
+                                    Giới thiệu
                                 </h2>
                             </div>
                             <p>
@@ -466,84 +466,36 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-6 col-lg-4 mb-4">
-                    <div class="item_stunning">
-                        <div class="icon">
-                            <i class="icofont-chart-histogram-alt"></i>
-                        </div>
-                        <div class="title">
-                            Hơn 5+ năm hoạt động phục cho nhiều sự kiện doanh nghiệp & tư nhân
-                        </div>
-                        <div class="desc">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-lg-4 mb-4">
-                    <div class="item_stunning">
-                        <div class="icon">
-                            <i class="icofont-star"></i>
-                        </div>
-                        <div class="title">
-                            Thực Phẩm Chất Lượng Cao
-                        </div>
-                        <div class="desc">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-lg-4 mb-4">
-                    <div class="item_stunning">
-                        <div class="icon">
-                            <i class="icofont-chef"></i>
-                        </div>
-                        <div class="title">
-                            Đầu bếp riêng với nhiều năm kinh nghiệm
-                        </div>
-                        <div class="desc">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-lg-4 mb-4">
-                    <div class="item_stunning">
-                        <div class="icon">
-                            <i class="icofont-restaurant"></i>
-                        </div>
-                        <div class="title">
-                            Dịch vụ ăn uống chuyên nghiệp
-                        </div>
-                        <div class="desc">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-6 col-lg-4 mb-4">
-                    <div class="item_stunning">
-                        <div class="icon">
-                            <i class="icofont-restaurant-menu"></i>
+            <div class="row align-items-center mb-5 flex-lg-row-reverse">
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <div class="wrapper">
+                        <div class="section-title">
+                            <div class="title">
+                                <h2>
+                                    Cảm hứng thành lập
+                                </h2>
+                            </div>
+                            <p>
+                                <img src="assets/images/flower-decor.webp">
+                            </p>
                         </div>
-                        <div class="title">
-                            Thực đơn phong phú đa dạng
-                        </div>
-                        <div class="desc">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        <div class="section-content text-center ps-lg-4">
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                            </p>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-6 col-lg-4 mb-4">
-                    <div class="item_stunning">
-                        <div class="icon">
-                            <i class="icofont-fast-delivery"></i>
-                        </div>
-                        <div class="title">
-                            Giao hàng tận nơi
-                        </div>
-                        <div class="desc">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                <div class="col-lg-6">
+                    <!-- có video thì thêm class wrap-image-video-->
+                    <div class="wrap-image-animation wrap-image-video" style="background-image: url('assets/images/timeline-img1.jpg')">
+                        <div class="wrap-img">
+                            <img src="assets/images/timeline-img1.jpg" alt="" class="img-main img-fluid">
+                            <!-- có video thì có nút này-->
+                            <a href="javascript:void(0);" class="btn-play-yt js-video-button" data-video-id='qK-ZUFX5fnk'>
+                                <i class="icofont-play-alt-2"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -552,6 +504,182 @@
     </section>
     <!-- end about section -->
 
+    <section id="section-2" class="section-about-chef section-background section-padding">
+        <div class="container">
+            <div class="section-title">
+                <div class="section-title mb-4 mb-lg-0">
+                    <div class="title">
+                        <h2>
+                            Cảm hứng của Chef
+                        </h2>
+                    </div>
+                    <p>
+                        <img src="assets/images/flower-decor-2.png">
+                    </p>
+                </div>
+            </div>
+            <div class="section-content">
+                <div class="wrap-content mb-5">
+                    <div class="description">
+                        Eros ludus laboramus ne eam. Mea inani utamur rationibus eu, his ei assum volutpat. Integre dolorem mel an, mei nihil omittam et. Postea regione mentitum ei quo, debitis phaedrum conceptam vis at. Fugit choro scriptorem nam an, vel ex possit audire. Qui elitr graeci referrentur ad, eu ludus laudem tincidunt vel, ad vim wisi graeci efficiendi.
+                    </div>
+                    <div class="name">
+                        – Robert Williams
+                    </div>
+                    <div class="title">
+                        Founder - Ceo
+                    </div>
+                </div>
+                <div class="wrap-image">
+                    <div class="row">
+                        <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+                            <div class="image-flip">
+                                <img src="assets/images/img-flip-1.jpg" alt="" class="img-show">
+                                <img src="assets/images/img-flip-2.jpg" alt="" class="img-flip">
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="image-flip">
+                                <img src="assets/images/img-flip-3.jpg" alt="" class="img-show">
+                                <img src="assets/images/img-flip-4.jpg" alt="" class="img-flip">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="section-3" class="section-about-food section-padding section-background-dark">
+        <div class="container">
+            <div class="section-title-border">
+                <h2>
+                    Câu chuyện của món ăn
+                </h2>
+            </div>
+            <div class="section-content">
+                <!-- item lệch nhau thì thêm flex-lg-row-reverse -->
+                <div class="item-food-history">
+                    <div class="row align-items-center">
+                        <div class="col-12 col-lg-6 pe-lg-5 ps-lg-5">
+                            <div class="content">
+                                <div class="title">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                                </div>
+                                <div class="time">
+                                    Năm 2019
+                                </div>
+                                <div class="desc">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6 pe-lg-5 ps-lg-5">
+                            <div class="image">
+                                <img src="assets/images/timeline-img1.jpg" alt="" class="img-fluid">
+                                <div class="text">
+                                    <span>
+                                        Lorem Ipsum
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end item-->
+
+                <!-- item lệch nhau thì thêm flex-lg-row-reverse -->
+                <div class="item-food-history">
+                    <div class="row align-items-center flex-lg-row-reverse">
+                        <div class="col-12 col-lg-6 pe-lg-5 ps-lg-5">
+                            <div class="content">
+                                <div class="title">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                                </div>
+                                <div class="time">
+                                    Năm 2019
+                                </div>
+                                <div class="desc">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6 pe-lg-5 ps-lg-5">
+                            <div class="image">
+                                <img src="assets/images/timeline-img1.jpg" alt="" class="img-fluid">
+                                <div class="text">
+                                    <span>
+                                        Lorem Ipsum
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end item-->
+
+                <!-- item lệch nhau thì thêm flex-lg-row-reverse -->
+                <div class="item-food-history">
+                    <div class="row align-items-center">
+                        <div class="col-12 col-lg-6 pe-lg-5 ps-lg-5">
+                            <div class="content">
+                                <div class="title">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                                </div>
+                                <div class="time">
+                                    Năm 2019
+                                </div>
+                                <div class="desc">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6 pe-lg-5 ps-lg-5">
+                            <div class="image">
+                                <img src="assets/images/timeline-img1.jpg" alt="" class="img-fluid">
+                                <div class="text">
+                                    <span>
+                                        Lorem Ipsum
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end item-->
+
+                <!-- item lệch nhau thì thêm flex-lg-row-reverse -->
+                <div class="item-food-history">
+                    <div class="row align-items-center flex-lg-row-reverse">
+                        <div class="col-12 col-lg-6 pe-lg-5 ps-lg-5">
+                            <div class="content">
+                                <div class="title">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                                </div>
+                                <div class="time">
+                                    Năm 2019
+                                </div>
+                                <div class="desc">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6 pe-lg-5 ps-lg-5">
+                            <div class="image">
+                                <img src="assets/images/timeline-img1.jpg" alt="" class="img-fluid">
+                                <div class="text">
+                                    <span>
+                                        Lorem Ipsum
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end item-->
+            </div>
+        </div>
+    </section>
 
 
 
