--- a/service.html
+++ b/service.html
@@ -504,6 +504,86 @@
                     <img src="assets/images/flower-decor.webp">
                 </p>
             </div>
+            <div class="section-content">
+                <div class="row">
+                    <div class="col-6 col-lg-3">
+                        <div class="item">
+                            <div class="image">
+                                <img src="assets/images/cmenu.jpg" alt="">
+                                <a href="service_food.html" >Đặt ngay</a>
+                            </div>
+                            <div class="content">
+                                <div class="title">
+                                    <h3>Menu 3-course</h3>
+                                </div>
+                                <div class="price">
+                                    Giá/Người: 880k++/pax
+                                </div>
+                                <div class="note">
+                                    Giá trên chỉ bao gồm đồ ăn. Chi phí thêm (++) bao gồm Staff, Travel, Drinks, VAT
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-3">
+                        <div class="item">
+                            <div class="image">
+                                <img src="assets/images/cmenu.jpg" alt="">
+                                <a href="service_food.html" >Đặt ngay</a>
+                            </div>
+                            <div class="content">
+                                <div class="title">
+                                    <h3>Menu 4-course</h3>
+                                </div>
+                                <div class="price">
+                                    Giá/Người: 1180k++/pax
+                                </div>
+                                <div class="note">
+                                    Giá trên chỉ bao gồm đồ ăn. Chi phí thêm (++) bao gồm Staff, Travel, Drinks, VAT
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-3">
+                        <div class="item">
+                            <div class="image">
+                                <img src="assets/images/cmenu.jpg" alt="">
+                                <a href="service_food.html" >Đặt ngay</a>
+                            </div>
+                            <div class="content">
+                                <div class="title">
+                                    <h3>Menu 5-course </h3>
+                                </div>
+                                <div class="price">
+                                    Giá/Người: 1390k++/pax
+                                </div>
+                                <div class="note">
+                                    Giá trên chỉ bao gồm đồ ăn. Chi phí thêm (++) bao gồm Staff, Travel, Drinks, VAT
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-3">
+                        <div class="item">
+                            <div class="image">
+                                <img src="assets/images/cmenu.jpg" alt="">
+                                <a href="service_food.html" >Đặt ngay</a>
+                            </div>
+                            <div class="content">
+                                <div class="title">
+                                    <h3>Menu 6-course </h3>
+                                </div>
+                                <div class="price">
+                                    Giá/Người: 1680k++/pax
+                                </div>
+                                <div class="note">
+                                    Giá trên chỉ bao gồm đồ ăn. Chi phí thêm (++) bao gồm Staff, Travel, Drinks, VAT
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </main>
